FEA#7638 Add configuration on product document rules to disable the manual reception of document line requests

Version 1.14 - 2017-11-09

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Use Rule Mixin feature to implement documents rules

Version 1.3 - 2015-01-22
* FEA#0000 Allow to import / export attachments on contract
* FEA#0000 module creation