@@ -1,3 +1,4 @@
+* BUG#7796 Le calcul des documents requis ne doit pas planter si l'utilisateur n'est pas habilité à voir certains documents
 FEA#7638 Ajout de la configuration sur les règles de document du  produit pour désactiver la réception manuelle des lignes de demande de document
 
 Version 1.14 - 2017-11-09
